Stanford Benefits x.x-x.x, xxxx-xx-xx
---------------------------------

Stanford Benefits 7.x-1.0-alpha2, 2019-09-24
---------------------------------
- Bug fix: Javascript not loading
- Make numerous fields not required
- Update taxonomy tids in Views

Stanford Benefits 7.x-1.0-alpha1, 2019-09-23
---------------------------------
- Initial alpha release 
