@@ -2,7 +2,7 @@ name = stanford_benefits
 description = All the content type and view settings for the Benefit Comparison Tool.
 core = 7.x
 package = Stanford
-version = 7.x-1.0-alpha2
+version = 7.x-1.0-alpha3
 dependencies[] = better_exposed_filters
 dependencies[] = ctools
 dependencies[] = ds
@@ -28,6 +28,7 @@ features[field_base][] = field_su_access_serv
 features[field_base][] = field_su_acupuncture
 features[field_base][] = field_su_allergy_tests
 features[field_base][] = field_su_allergy_treatment
+features[field_base][] = field_su_alternative_medicine
 features[field_base][] = field_su_ambulance_charges
 features[field_base][] = field_su_anesthesia
 features[field_base][] = field_su_annual_maximum
@@ -156,6 +157,7 @@ features[field_instance][] = node-benefit-field_su_access_serv
 features[field_instance][] = node-benefit-field_su_acupuncture
 features[field_instance][] = node-benefit-field_su_allergy_tests
 features[field_instance][] = node-benefit-field_su_allergy_treatment
+features[field_instance][] = node-benefit-field_su_alternative_medicine
 features[field_instance][] = node-benefit-field_su_ambulance_charges
 features[field_instance][] = node-benefit-field_su_autism
 features[field_instance][] = node-benefit-field_su_babys_first_exam
